# DPR

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  dense_retriever.py  e2e_interactive.py  e2e_poc.py  eval_dense_retriever.py  generate_dense_embeddings.py  preprocess_reader_data.py  setup.cfg  setup.py  single_encoders.py  train_dense_encoder.py  train_reader.py
data/: download_data.py
dpr/: __init__.py  options.py
dpr/data/: qa_validation.py  reader_data.py
dpr/indexer/: faiss_indexers.py
dpr/models/: __init__.py  biencoder.py  fairseq_models.py  hf_models.py  pytext_models.py  reader.py
dpr/utils/: data_utils.py  dist_utils.py  model_utils.py  tokenizers.py
