# pytest pycodestyle configuration
[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

[pylama]
linters = pycodestyle,pyflakes
ignore = D203,

# pytest pycodestyle configuration
codestyle_max_line_length = 88
codestyle_ignore = E302 W503 E203 E501 E265 E402 E251 E211
codestyle_exclude =
    docs/
filterwarnings =
    ignore::ResourceWarning:ruamel[.*]

log_cli = true
log_cli_level = WARNING


[pylama:pycodestyle]
max-line-length = 88
exclude = ../models,./logs,./data,./checkpoints

[pycodestyle]
max-line-length = 88
exclude = ../models,./logs,./data,./checkpoints

[flake8]
max-line-length = 88
ignore = W503, E121, E126, E211, E225, E501, E203, E402, F811
exclude =
    docs

[mypy]
ignore_missing_imports = true

[isort]
line_length = 88
use_parentheses = True
include_trailing_comma = True
multi_line_output = 3
force_single_line = True

[metadata]
description-file = README.md
license_file = LICENSE.txt
